# BRAIN

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  run.sh
.brain_vector_store/mahatma_gandhi/: del.0  manifest.1
.brain_vector_store/mahatma_gandhi/0/: scalar.0.ipc
.brain_vector_store/mahatma_gandhi/idmap.0/: 000008.sst  IDENTITY  MANIFEST-000005  OPTIONS-000007
benchmarks/: zvec_vs_nexus.py
brain_system/: __init__.py  __main__.py  app.py  main.py  requirements.txt  wrapper.py
brain_system/agents/: base_agent.py  emotional_agent.py  executive_agent.py  logic_agent.py  memory_agent.py  sensory_agent.py
brain_system/core/: document_loader.py  llm_interface.py  memory_store.py  orchestrator.py  persona.py  vector_memory.py  working_memory.py
brain_system/personas/: __init__.py  persona_registry.py
brain_system/web/static/css/: style.css
brain_system/web/static/js/: app.js
brain_system/web/templates/: index.html
examples/: agent_wrapper.py  basic_usage.py  custom_provider.py  persona_mode.py
