[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-system"
version = "0.3.0"
description = "A multi-agent cognitive architecture powered by LangGraph — five specialized AI agents modeled after the human brain."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Shivam Tyagi", email = "shivamtyagi18@gmail.com" },
]
keywords = ["ai", "agents", "multi-agent", "langchain", "langgraph", "cognitive", "brain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-community",
    "langchain-ollama",
    "python-dotenv",
    "PyPDF2",
]

[project.optional-dependencies]
web = ["flask"]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/shivamtyagi18/BRAIN"
Repository = "https://github.com/shivamtyagi18/BRAIN"
Issues = "https://github.com/shivamtyagi18/BRAIN/issues"

[project.scripts]
brain-cli = "brain_system.main:main"

[tool.hatch.build.targets.wheel]
packages = ["brain_system"]
